# cmgd-data-api

./: .gitignore  DEVELOPMENT.md  Dockerfile  pyproject.toml  skaffold.yaml
app/: config.py  dao.py  db.py  main.py
kubernetes/: deployment.yaml  ingressroute.yaml  service.yaml
