[tool.poetry]
name = "cmgd-data-api"
version = "0.1.0"
description = ""
authors = ["Sean Davis <seandavi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.6"}
clickhouse-connect = "^0.8.9"
pydantic-settings = "^2.6.1"
uvicorn = "^0.32.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
